Fix some sintax and spacing issues

--- a/src/App.css
+++ b/src/App.css
@@ -38,10 +38,7 @@ ul {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-#container-input-todo {
-  box-shadow: 1px 0px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 1px 0 10px rgba(0, 0, 0, 0.2);
   border-radius: 0.6rem;
   padding: 0.1rem;
 }
